# modern-cpp-in-practice

./: .gitignore  README.md  README.zh-CN.md  book.toml  skills-lock.json  style-guide.md
.github/workflows/: rebuild-docs.yml
chapters/: 00-preface.md  01-map.md  01-ownership-lifetime-and-raii.md  01-ownership-lifetime-and-resource-management.md  02-errors-results-and-failure-boundaries.md  02-values-identity-and-invariants.md  03-errors-results-and-failure-boundaries.md  03-value-semantics-identity-and-invariants.md  04-compile-time-programming.md  04-generic-code-concepts-and-compile-time-cost.md  04-parameter-passing-return-types-and-api-surface.md  05-concepts-constraints-and-generic-interfaces.md  05-interfaces-apis-and-dependency-direction.md  05-standard-library-types-that-change-design.md  06-generic-code-with-concepts-and-constraints.md  06-libraries-modules-abi-and-versioning.md  06-ranges-views-and-functional-composition.md  07-interfaces-apis-and-dependency-direction.md  07-ranges-views-and-generators.md  07-shared-state-synchronization-and-contention.md  08-compile-time-programming-without-losing-your-mind.md  08-modules-libraries-abi-and-versioning.md  08-tasks-coroutines-and-cancellation.md  09-interface-design-and-dependency-direction.md  09-pipelines-backpressure-and-service-throughput.md  09-shared-state-synchronization-and-contention.md  10-coroutines-and-generators.md  10-data-structures-layout-and-memory-behavior.md  10-runtime-polymorphism-type-erasure-and-callbacks.md  11-cost-models-allocation-and-locality.md  11-modules-libraries-packaging-and-abi-reality.md  11-senders-receivers-and-structured-concurrency.md  12-benchmarking-profiling-and-regression-control.md  12-pipelines-backpressure-and-service-throughput.md  12-shared-state-synchronization-and-contention.md  13-builds-diagnostics-and-static-analysis.md  13-coroutines-tasks-and-suspension-boundaries.md  13-data-structures-layout-and-memory-behavior.md  14-cost-models-allocation-and-locality.md  14-structured-concurrency-cancellation-and-backpressure.md  (+20 more)
chapters/appendices/: code-review-checklists.md  cpp23-feature-index-by-engineering-use.md  glossary.md  toolchain-baseline.md
docs/: index.html
docs/en/: 01-ownership-lifetime-and-raii.html  02-values-identity-and-invariants.html  03-errors-results-and-failure-boundaries.html  04-parameter-passing-return-types-and-api-surface.html  05-standard-library-types-that-change-design.html  06-generic-code-with-concepts-and-constraints.html  07-ranges-views-and-generators.html  08-compile-time-programming-without-losing-your-mind.html  09-interface-design-and-dependency-direction.html  10-runtime-polymorphism-type-erasure-and-callbacks.html  11-modules-libraries-packaging-and-abi-reality.html  12-shared-state-synchronization-and-contention.html  13-coroutines-tasks-and-suspension-boundaries.html  14-structured-concurrency-cancellation-and-backpressure.html  15-data-layout-containers-and-memory-behavior.html  16-allocation-locality-and-cost-models.html  17-benchmarking-and-profiling-without-lying-to-yourself.html  18-testing-strategy-for-resource-and-boundary-bugs.html  19-sanitizers-static-analysis-and-build-diagnostics.html  20-observability-for-native-systems.html  21-building-a-small-service-in-modern-cpp.html  22-building-a-reusable-library-in-modern-cpp.html  23-reviewers-checklist-modern-cpp-code.html  404.html  index.html  map.html  preface.html  print.html  searcher-c2a407aa.js  searchindex-58bfaae8.js  searchindex-810527eb.js  searchindex-a846e9dc.js  toc-6430f798.js  toc.html
docs/en/appendices/: code-review-checklists.html  cpp23-feature-index-by-engineering-use.html  glossary.html  toolchain-baseline.html
docs/en/theme/: custom-5b8e14c7.css
docs/plans/: 2026-03-25-modern-cpp-book.md
docs/zh-CN/: 01-ownership-lifetime-and-raii.html  02-values-identity-and-invariants.html  03-errors-results-and-failure-boundaries.html  04-parameter-passing-return-types-and-api-surface.html  05-standard-library-types-that-change-design.html  06-generic-code-with-concepts-and-constraints.html  07-ranges-views-and-generators.html  08-compile-time-programming-without-losing-your-mind.html  09-interface-design-and-dependency-direction.html  10-runtime-polymorphism-type-erasure-and-callbacks.html  11-modules-libraries-packaging-and-abi-reality.html  12-shared-state-synchronization-and-contention.html  13-coroutines-tasks-and-suspension-boundaries.html  14-structured-concurrency-cancellation-and-backpressure.html  15-data-layout-containers-and-memory-behavior.html  16-allocation-locality-and-cost-models.html  17-benchmarking-and-profiling-without-lying-to-yourself.html  18-testing-strategy-for-resource-and-boundary-bugs.html  19-sanitizers-static-analysis-and-build-diagnostics.html  20-observability-for-native-systems.html  21-building-a-small-service-in-modern-cpp.html  22-building-a-reusable-library-in-modern-cpp.html  23-reviewers-checklist-modern-cpp-code.html  404.html  map.html  preface.html  print.html  searcher-c2a407aa.js  searchindex-0fc7cccf.js  searchindex-780adacc.js  searchindex-99b64400.js  toc-8b875a01.js  toc.html
docs/zh-CN/appendices/: code-review-checklists.html  cpp23-feature-index-by-engineering-use.html  glossary.html  terminology-reference.html  toolchain-baseline.html
examples/web-api/: CMakeLists.txt  README.md
examples/web-api/include/webapi/: error.hpp  handlers.hpp  http.hpp  json.hpp  middleware.hpp  repository.hpp  router.hpp  task.hpp
examples/web-api/src/: main.cpp
examples/web-api/src/modules/: error.cppm  handlers.cppm  http.cppm  json.cppm  middleware.cppm  repository.cppm  router.cppm  task.cppm
examples/web-api/tests/: CMakeLists.txt  test_http.cpp  test_json.cpp  test_repository.cpp  test_router.cpp  test_task.cpp
scripts/: build-books.ps1
translations/zh-CN/: book.toml
translations/zh-CN/chapters/: 01-ownership-lifetime-and-raii.md  02-values-identity-and-invariants.md  03-errors-results-and-failure-boundaries.md  04-parameter-passing-return-types-and-api-surface.md  07-ranges-views-and-generators.md  (+21 more)
(+5 files in other folders)
